asg/igw_nat.tf
resource "aws_internet_gateway" "igw" {
    vpc_id = aws_vpc.test.id
    tags = {
        Name = "test-igw"
    }
}

resource "aws_route_table" "public" {
    vpc_id = aws_vpc.test.id
    
    tags = {
      Name = "public-rt"
    }
}

resource "aws_route" "internet_access" {
    route_table_id         = aws_route_table.public.id
    destination_cidr_block = "0.0.0.0/0"
    gateway_id             = aws_internet_gateway.igw.id
}

resource "aws_route_table_association" "public_assoc" {
    count          = length(var.public_subnet)
    subnet_id      = aws_subnet.public[count.index].id
    route_table_id = aws_route_table.public.id
  
}
